<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearpath_nav2_demos</name>
  <version>0.0.0</version>
  <description>Nav2 demos for Clearpath robots</description>
  <license>BSD</license>

  <author email="rkreinin@clearpathrobotics.com">Roni Kreinin</author>
 
  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>
  <maintainer email="rkreinin@clearpathrobotics.com">Roni Kreinin</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>



  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>clearpath_config</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
